--- a/src/pages/profile/edit profile/EditProfile.css
+++ b/src/pages/profile/edit profile/EditProfile.css
@@ -1,12 +1,116 @@
 .edit-profile j {
-    height: 5px;
-    background-color: #00ffd9;
-    width: 10px;
-    border-radius: 10px;
-    flex: 1;
-    box-shadow: 0px 0px 10px 5px #00ffd9;
+  height: 5px;
+  background-color: #00ffd9;
+  width: 10px;
+  border-radius: 10px;
+  flex: 1;
+  box-shadow: 0px 0px 10px 5px #00ffd9;
 }
 .edit-profile .img-profile {
-    box-shadow: 0px 0px 10px 5px #00ffd9;
-    
+  position: relative;
+  box-shadow: 0px 0px 10px 5px #00ffd9;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.edit-profile .img-profile input {
+  display: none;
+}
+
+.edit-profile .img-profile label {
+  position: absolute;
+  left: 35px;
+  bottom: 10px;
+  cursor: pointer;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.edit-profile .img-profile label:hover {
+  background-color: #00ffd9;
+  box-shadow: 0px 0px 10px 5px #00ffd9;
+  color: #000;
+}
+
+.edit-profile .input-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.edit-profile .input-container .input-box {
+  flex: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.edit-profile .input-container .input-box label {
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
+.edit-profile .input-container .input-box label span {
+  color: #e00;
+}
+
+.edit-profile .input-container .input-box input {
+  padding: 10px 20px;
+  background-color: var(--main-color);
+  color: var(--color-white);
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  box-shadow: 0px 0px 5px 0px #00ffd9;
+}
+
+.edit-profile button {
+  position: relative;
+  padding: 10px 40px;
+  border-radius: 10px;
+  background-color: var(--secondary-color);
+  color: var(--color-white);
+  font-size: 1em;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  border: 2px solid transparent;
+  overflow: hidden;
+  outline: none;
+  box-shadow: 0px 0px 10px 2px #00ffd9;
+}
+
+.edit-profile button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00ffd9;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.2s ease-in-out;
+  z-index: -1;
+}
+
+.edit-profile button:hover {
+  color: #000;
+  border-color: #00ffd9;
+  box-shadow: 0px 0px 10px 2px #00ffd9;
+}
+
+.edit-profile button:hover::before {
+  transform: scaleX(1);
+}
+
+.edit-profile button:active {
+  transform: scale(0.98);
 }
