--- a/src/utils/app bar/NavBar.css
+++ b/src/utils/app bar/NavBar.css
@@ -107,6 +107,10 @@
   transition: all 0.1s;
 }
 
+.navbar-phones {
+  display: none;
+}
+
 @media (min-width: 320px) and (max-width: 767px) {
   .navbar {
     display: none;
@@ -141,5 +145,20 @@
     z-index: 1;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+  }
+
+  .navigators-phones {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .navigators-phones a {
+    padding: 10px 20px;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
   }
 }
