--- a/src/admin/components/components.css
+++ b/src/admin/components/components.css
@@ -37,8 +37,8 @@
   transition: 0.5s;
 }
 
-.category-component .input-box input:focus ~ span,
-.category-component .input-box input:valid ~ span {
+.category-component .input-box input:focus~span,
+.category-component .input-box input:valid~span {
   top: -18px;
   left: 0;
   color: inherit;
@@ -124,7 +124,7 @@
   color: inherit;
 }
 
-.category-component .category > span {
+.category-component .category>span {
   background-color: rgb(37, 153, 2);
   padding: 10px 20px;
   border-radius: 20px;
@@ -165,11 +165,11 @@ table img {
   flex-wrap: wrap;
 }
 
-.input-container > .input-box {
+.input-container>.input-box {
   flex: 1;
 }
 
-.input-container > select {
+.input-container>select {
   flex: 1;
   font-size: 1em;
   padding: 15px;
@@ -192,7 +192,7 @@ table img {
   align-items: center;
 }
 
-.upload-box label > img {
+.upload-box label>img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -201,4 +201,15 @@ table img {
 .action-btn button {
   padding: 10px;
   font-size: 1rem;
+}
+
+@media (min-width : 320px) and (max-width : 767px) {
+  .category-component .input-box {
+    width: 100%;
+  }
+
+  select,
+  .search {
+    width: 100%;
+  }
 }
