--- a/src/pages/cart/CartPage.css
+++ b/src/pages/cart/CartPage.css
@@ -68,7 +68,7 @@
 .cart-page .show-products button {
   border: none;
   outline: none;
-  background-color: #e00;
+  background-color: transparent;
   font-size: 1rem;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -80,12 +80,12 @@
 
 .cart-page .show-products button:hover {
   transform: scale(1.1);
-  background-color: #a00;
 }
 
 .cart-page .show-products button:active {
   transform: scale(0.9);
   background-color: #a00;
+  border-radius: 50%;
 }
 
 .cart-page .pro-container {
@@ -101,25 +101,11 @@
   margin-top: 1rem;
 }
 
-.cart-page .buttons-box button.add,
-.cart-page .buttons-box button.minus {
-  color: #fff;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  padding: 5px 10px;
+.cart-page .buttons-box {
+  background-color: #002741;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  font-size: 1.2rem;
-}
-
-.cart-page .buttons-box button.add {
-  background-color: #4bb543;
-}
-
-.cart-page .buttons-box button.minus {
-  background-color: #e00;
+  padding: 0 10px;
+  gap: 0.4rem !important;
 }
 
 .cart-page .buttons-box button.add:hover,
