--- a/src/pages/product view/ProductView.css
+++ b/src/pages/product view/ProductView.css
@@ -33,6 +33,7 @@
 }
 
 .product-view-page ul li {
+   position: relative;
    background-color: rgb(224, 136, 64);
    width: 30rem;
    border-radius: 8px;
@@ -40,6 +41,34 @@
    display: flex;
    align-items: center;
    gap: 0.5rem;
+   overflow: hidden;
+}
+
+.product-view-page ul li:hover::before {
+   content: "";
+   position: absolute;
+   height: 80%;
+   top: 50%;
+   transform: translateY(-50%) skew(-10deg);
+   box-shadow: 0 0 90px 70px rgb(255 255 255);
+   right: 50%;
+   animation: shine 1s ease-in-out forwards;
+}
+
+@keyframes shine {
+   0% {
+      right: 10%;
+      opacity: 0;
+   }
+
+   50% {
+      opacity: 1;
+   }
+
+   100% {
+      right: 100%;
+      opacity: 0;
+   }
 }
 
 .product-view-page .icon-box {
