--- a/src/pages/product view/ProductView.css
+++ b/src/pages/product view/ProductView.css
@@ -73,6 +73,7 @@
 
 .product-view-page .icon-box {
    display: flex;
+   flex-wrap: wrap;
    align-items: center;
    gap: .4rem;
    background-color: tomato;
@@ -133,4 +134,19 @@
    margin: 0;
    margin-bottom: 1.5rem;
    user-select: none;
+}
+
+@media (min-width : 320px) and (max-width : 767px) {
+   .product-view-page .details-container {
+      flex-direction: column !important;
+   }
+
+   .product-view-page .details-component {
+      padding: 0;
+      width: 100%;
+   }
+
+   .product-view-page .details-component>li {
+      width: 100%;
+   }
 }
