--- a/src/pages/profile/edit profile/EditProfile.css
+++ b/src/pages/profile/edit profile/EditProfile.css
@@ -28,6 +28,10 @@
   justify-content: center;
   border-radius: 50%;
   padding: 5px;
+  color: #fff;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
 }
 
 .edit-profile .img-profile label:hover {
